--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -1,16 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--*- mode: xml -*-->
+<?xml version="1.0"?>
 <glade-interface>
+  <!-- interface-requires gtk+ 2.6 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkDialog" id="vmm-open-connection">
     <property name="visible">True</property>
     <property name="title" translatable="yes">Add Connection</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <signal name="delete_event" handler="on_vmm_open_connection_delete_event"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <widget class="GtkTable" id="table1">
             <property name="visible">True</property>
@@ -23,8 +24,8 @@
               <widget class="GtkCheckButton" id="autoconnect">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
                 <property name="use_underline">True</property>
-                <property name="response_id">0</property>
                 <property name="draw_indicator">True</property>
               </widget>
               <packing>
@@ -56,7 +57,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <accessibility>
-                  <atkproperty name="AtkObject::accessible_name" translatable="yes">Hostname Field</atkproperty>
+                  <atkproperty name="AtkObject::accessible-name" translatable="yes">Hostname Field</atkproperty>
                 </accessibility>
               </widget>
               <packing>
@@ -87,9 +88,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="border_width">3</property>
-                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="shadow_type">GTK_SHADOW_IN</property>
+                <property name="hscrollbar_policy">automatic</property>
+                <property name="vscrollbar_policy">automatic</property>
+                <property name="shadow_type">in</property>
                 <child>
                   <widget class="GtkTreeView" id="conn-list">
                     <property name="visible">True</property>
@@ -109,7 +110,7 @@
                 <property name="items" translatable="yes">Xen
 QEMU/KVM</property>
                 <accessibility>
-                  <atkproperty name="AtkObject::accessible_name" translatable="yes">Hypervisor Select</atkproperty>
+                  <atkproperty name="AtkObject::accessible-name" translatable="yes">Hypervisor Select</atkproperty>
                 </accessibility>
                 <signal name="changed" handler="on_type_hypervisor_changed"/>
               </widget>
@@ -152,7 +153,7 @@ Remote Password or Kerberos
 Remote SSL/TLS with x509 certificate
 Remote tunnel over SSH</property>
                 <accessibility>
-                  <atkproperty name="AtkObject::accessible_name" translatable="yes">Connection Select</atkproperty>
+                  <atkproperty name="AtkObject::accessible-name" translatable="yes">Connection Select</atkproperty>
                 </accessibility>
                 <signal name="changed" handler="on_connection_changed"/>
               </widget>
@@ -175,31 +176,37 @@ Remote tunnel over SSH</property>
             <property name="visible">True</property>
           </widget>
           <packing>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="expand">False</property>
+            <property name="pack_type">end</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="cancel">
+                <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="label">gtk-cancel</property>
+                <property name="receives_default">False</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">0</property>
                 <signal name="clicked" handler="on_cancel_clicked"/>
               </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkButton" id="connect">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="response_id">0</property>
+                <property name="receives_default">False</property>
                 <signal name="clicked" handler="on_connect_clicked"/>
                 <child>
                   <widget class="GtkAlignment" id="alignment11">
@@ -218,6 +225,7 @@ Remote tunnel over SSH</property>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
@@ -238,13 +246,16 @@ Remote tunnel over SSH</property>
                 </child>
               </widget>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
